--- a/Cashflow9000/Resources/layout/Transaction.axml
+++ b/Cashflow9000/Resources/layout/Transaction.axml
@@ -50,6 +50,17 @@
         p1:layout_marginLeft="15dp"
         p1:layout_marginTop="20dp" />
     <TextView
+        p1:text="@string/recurrence"
+        p1:textAppearance="?android:attr/textAppearanceMedium"
+        p1:id="@+id/textView4"
+        p1:layout_marginTop="20dp" />
+    <Spinner
+        p1:id="@+id/spinRecurrence"
+        p1:layout_gravity="fill_horizontal"
+        p1:layout_columnSpan="2"
+        p1:layout_marginLeft="15dp"
+        p1:layout_marginTop="20dp" />
+    <TextView
         p1:text="@string/note"
         p1:textAppearance="?android:attr/textAppearanceMedium"
         p1:id="@+id/textView3"
