--- a/Cashflow9000/Resources/layout/Category.axml
+++ b/Cashflow9000/Resources/layout/Category.axml
@@ -5,4 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/gridLayout1"
-    android:columnCount="2" />
+    android:columnCount="3">
+    <TextView
+        android:text="Category"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView1" />
+    <Button
+        android:text="@string/save"
+        android:id="@+id/buttonSave"
+        android:layout_gravity="right"
+        android:layout_column="2" />
+    <TextView
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/textView2"
+        android:text="@string/name"
+        android:layout_marginTop="20dp" />
+    <EditText
+        android:id="@+id/editName"
+        android:layout_gravity="fill_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_columnSpan="2" />
+</GridLayout>
