--- a/Cashflow9000/Resources/layout/Main.axml
+++ b/Cashflow9000/Resources/layout/Main.axml
@@ -28,4 +28,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonBudgets" />
+    <Button
+        android:text="Planned Transactions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonPlannedTransactions" />
 </LinearLayout>
