--- a/Cashflow9000/Resources/layout/Main.axml
+++ b/Cashflow9000/Resources/layout/Main.axml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <include
+    <!--<include
         android:id="@+id/toolbar"
-        layout="@layout/Toolbar" />
+        layout="@layout/Toolbar" />-->
     <Button
         android:text="Transactions"
         android:layout_width="match_parent"
