--- a/Cashflow9000/Resources/layout-xlarge/ListActivity.axml
+++ b/Cashflow9000/Resources/layout-xlarge/ListActivity.axml
@@ -10,11 +10,13 @@
             android:id="@+id/containerList"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:minHeight="500dp" />
         <FrameLayout
             android:id="@+id/containerItem"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3" />
+            android:layout_weight="3"
+            android:minHeight="500dp" />
     </LinearLayout>
 </ScrollView>
