--- a/Cashflow9000/Resources/layout/Main.axml
+++ b/Cashflow9000/Resources/layout/Main.axml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <!--<include
+<!--<include
         android:id="@+id/toolbar"
         layout="@layout/Toolbar" />-->
+    <TextView
+        android:text="Balance"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textBalance" />
     <Button
         android:text="Transactions"
         android:layout_width="match_parent"
