Fixed PlannedTransaction save button offscreen. Fixed crash when rotating device on all views

--- a/Cashflow9000/Resources/layout/Main.axml
+++ b/Cashflow9000/Resources/layout/Main.axml
@@ -37,7 +37,8 @@
         android:text="Planned Transactions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonPlannedTransactions" />
+        android:id="@+id/buttonPlannedTransactions"
+        android:visibility="gone" />
     <Button
         android:text="Budgets"
         android:layout_width="match_parent"
