Improved rendering of Transaction name string. Converted Milestones to RatioListItem. Sorted Transactions by date in TransactionListView.

--- a/Cashflow9000/Resources/layout/RatioListItem.axml
+++ b/Cashflow9000/Resources/layout/RatioListItem.axml
@@ -21,7 +21,5 @@
         android:id="@+id/progressTotal"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:layout_marginTop="10dp" />
 </GridLayout>
