--- a/Cashflow9000/Resources/layout/ModelList.axml
+++ b/Cashflow9000/Resources/layout/ModelList.axml
@@ -14,6 +14,12 @@
         p1:id="@+id/buttonAdd"
         p1:layout_column="1"
         p1:layout_gravity="right" />
+    <FrameLayout
+        p1:minWidth="25px"
+        p1:minHeight="25px"
+        p1:id="@+id/containerHeader"
+        p1:layout_gravity="fill_horizontal"
+        p1:layout_columnSpan="2" />
     <ListView
         p1:minWidth="25px"
         p1:minHeight="25px"
