--- a/Cashflow9000/Resources/layout/Transaction.axml
+++ b/Cashflow9000/Resources/layout/Transaction.axml
@@ -16,12 +16,15 @@
         <TextView
             p1:textAppearance="?android:attr/textAppearanceLarge"
             p1:id="@+id/textTitle"
-            p1:text="@string/transaction"
-            p1:layout_columnSpan="2"
-            p1:layout_columnWeight="2" />
+            p1:text="@string/transaction" />
         <Button
             p1:text="@string/save"
-            p1:id="@+id/buttonSave" />
+            p1:id="@+id/buttonSave"
+            p1:layout_gravity="right" />
+        <Button
+            p1:text="@string/delete"
+            p1:id="@+id/button1"
+            p1:layout_gravity="right" />
         <Cashflow9000.EditCurrency
             p1:id="@+id/editValue"
             p1:layout_gravity="fill_horizontal"
