--- a/Cashflow9000/Resources/layout/Milestone.axml
+++ b/Cashflow9000/Resources/layout/Milestone.axml
@@ -5,13 +5,18 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px"
-    android:columnCount="2"
+    android:columnCount="3"
     android:padding="20dp">
     <TextView
         android:text="@string/milestone"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/textView1"
         android:layout_gravity="left" />
+    <Button
+        android:text="@string/delete"
+        android:id="@+id/buttonDelete"
+        android:layout_columnWeight="1"
+        android:layout_gravity="right" />
     <Button
         android:text="@string/save"
         android:id="@+id/buttonSave"
@@ -24,7 +29,8 @@
     <EditText
         android:id="@+id/editName"
         android:layout_gravity="fill_horizontal"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:layout_columnSpan="2" />
     <TextView
         android:text="@string/amount"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -33,5 +39,6 @@
     <Cashflow9000.EditCurrency
         android:id="@+id/editAmount"
         android:layout_marginTop="20dp"
-        android:layout_gravity="fill_horizontal" />
+        android:layout_gravity="fill_horizontal"
+        android:layout_columnSpan="2" />
 </GridLayout>
